--- a/css/style.css
+++ b/css/style.css
@@ -149,4 +149,8 @@ a{
     font-family:disolve;
     font-size:x-large;
     color:white;
+    height:60px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
