Change footer esthetics

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ a{
     text-decoration: none;
     font-family:disolve;
     font-size:x-large;
+    font-weight:bold;
     color:black;
     height:60px;
     display:flex;
